quickstarts/microsoft.network/site-to-site-vpn-fqdn-bgp/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "prefix": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "naming prefix of the objects in the resource. it can be an empty string."
      }
    },
    "location1": {
      "type": "string",
      "allowedValues": [
        "canadacentral",
        "francecentral",
        "germanywestcentral",
        "japaneast",
        "centralus",
        "northeurope",
        "southeastasia",
        "eastus",
        "uksouth",
        "australiaeast",
        "eastus2",
        "westeurope",
        "southcentralus",
        "westus2"
      ],
      "metadata": {
        "description": "First Azure region with Availability Zone"
      }
    },
    "location2": {
      "type": "string",
      "allowedValues": [
        "canadacentral",
        "francecentral",
        "germanywestcentral",
        "japaneast",
        "centralus",
        "northeurope",
        "southeastasia",
        "eastus",
        "uksouth",
        "australiaeast",
        "eastus2",
        "westeurope",
        "southcentralus",
        "westus2"
      ],
      "metadata": {
        "description": "Second Azure region with Availability Zone"
      }
    },
    "vNet1Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'vnet1')]",
      "metadata": {
        "description": "Arbitrary name for the Azure Virtual Network 1"
      }
    },
    "vNet2Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'vnet2')]",
      "metadata": {
        "description": "Arbitrary name for the Azure Virtual Network 2"
      }
    },
    "vNet1AddressPrefix": {
      "type": "string",
      "defaultValue": "10.1.0.0/16",
      "metadata": {
        "description": "CIDR block representing the address space of the Azure VNet 1"
      }
    },
    "vNet2AddressPrefix": {
      "type": "string",
      "defaultValue": "10.2.0.0/16",
      "metadata": {
        "description": "CIDR block representing the address space of the Azure VNet 2"
      }
    },
    "subnet11Name": {
      "type": "string",
      "defaultValue": "subnet11",
      "metadata": {
        "description": "Arbitrary name for the Azure subnet1 in VNet1"
      }
    },
    "subnet12Name": {
      "type": "string",
      "defaultValue": "subnet12",
      "metadata": {
        "description": "Arbitrary name for the Azure subnet2 in VNet1"
      }
    },
    "subnet21Name": {
      "type": "string",
      "defaultValue": "subnet21",
      "metadata": {
        "description": "Arbitrary name for the Azure subnet1 in VNet2"
      }
    },
    "subnet22Name": {
      "type": "string",
      "defaultValue": "subnet22",
      "metadata": {
        "description": "Arbitrary name for the Azure subnet2 in VNet2"
      }
    },
    "subnet11Prefix": {
      "type": "string",
      "defaultValue": "10.1.1.0/24",
      "metadata": {
        "description": "CIDR block for subnet1 in VNet1- it is a subset of vNet1AddressPrefix address space"
      }
    },
    "subnet12Prefix": {
      "type": "string",
      "defaultValue": "10.1.2.0/24",
      "metadata": {
        "description": "CIDR block for subnet2 in VNet1- it is a subset of vNet1AddressPrefix address space"
      }
    },
    "gateway1subnetPrefix": {
      "type": "string",
      "defaultValue": "10.1.3.0/24",
      "metadata": {
        "description": "CIDR block for gateway subnet- it is a subset of vNet1AddressPrefix address space"
      }
    },
    "subnet21Prefix": {
      "type": "string",
      "defaultValue": "10.2.1.0/24",
      "metadata": {
        "description": "CIDR block for subnet1 in VNet2- it is a subset of vNet2AddressPrefix address space"
      }
    },
    "subnet22Prefix": {
      "type": "string",
      "defaultValue": "10.2.2.0/24",
      "metadata": {
        "description": "CIDR block for subnet2 in VNet2- it is a subset of vNet2AddressPrefix address space"
      }
    },
    "gateway2subnetPrefix": {
      "type": "string",
      "defaultValue": "10.2.3.0/24",
      "metadata": {
        "description": "CIDR block for gateway subnet- it is a subset of vNet2AddressPrefix address space"
      }
    },
    "gateway1Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'gw1')]",
      "metadata": {
        "description": "Arbitrary name for the new gateway1"
      }
    },
    "gateway2Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'gw2')]",
      "metadata": {
        "description": "Arbitrary name for the new gateway2"
      }
    },
    "gateway1PublicIP1Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('gateway1Name'),'IP1')]",
      "metadata": {
        "description": "Arbitrary name for public IP1 resource used for the new azure gateway1"
      }
    },
    "gateway1PublicIP2Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('gateway1Name'),'IP2')]",
      "metadata": {
        "description": "Arbitrary name for public IP2 resource used for the new azure gateway1"
      }
    },
    "gateway2PublicIP1Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('gateway2Name'),'IP1')]",
      "metadata": {
        "description": "Arbitrary name for public IP1 resource used for the new azure gateway2"
      }
    },
    "gateway2PublicIP2Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('gateway2Name'),'IP2')]",
      "metadata": {
        "description": "Arbitrary name for public IP2 resource used for the new azure gateway2"
      }
    },

    "gatewaySku": {
      "type": "string",
      "defaultValue": "VpnGw2AZ",
      "allowedValues": [
        "VpnGw1AZ",
        "VpnGw2AZ",
        "VpnGw3AZ",
        "VpnGw4AZ",
        "VpnGw5AZ"
      ],
      "metadata": {
        "description": "The Sku of the Gateway"
      }
    },
    "vpnGatewayGeneration": {
      "type": "string",
      "defaultValue": "Generation2",
      "allowedValues": [
        "Generation1",
        "Generation2"
      ]
    },
    "asnGtw1": {
      "type": "int",
      "defaultValue": 65001,
      "metadata": {
        "description": "BGP Autonomous System Number of the VPN Gateway1 in VNet1"
      }
    },
    "asnGtw2": {
      "type": "int",
      "defaultValue": 65002,
      "metadata": {
        "description": "BGP Autonomous System Number of the VPN Gateway2 in VNet2"
      }
    },
    "localGatewayName11": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'localGateway11')]",
      "metadata": {
        "description": "Arbitrary name for gateway resource representing VPN gateway1-public IP1"
      }
    },
    "localGatewayName12": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'localGateway12')]",
      "metadata": {
        "description": "Arbitrary name for gateway resource representing VPN gateway1-publicIP2"
      }
    },
    "localGatewayName21": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'localGateway21')]",
      "metadata": {
        "description": "Arbitrary name for gateway resource representing VPN gateway2-publicIP1"
      }
    },
    "localGatewayName22": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'localGateway22')]",
      "metadata": {
        "description": "Arbitrary name for gateway resource representing VPN gateway2-publicIP2"
      }
    },
    "connectionName11-21": {
      "type": "string",
      "defaultValue": "[concat(parameters('gateway1Name'),'-to-', parameters('gateway2PublicIP1Name'))]",
      "metadata": {
        "description": "Arbitrary name for the new connection between VPN gateway1 and the remote VPN Gateway2-public IP1"
      }
    },
    "connectionName12-22": {
      "type": "string",
      "defaultValue": "[concat(parameters('gateway1Name'),'-to-', parameters('gateway2PublicIP2Name'))]",
      "metadata": {
        "description": "Arbitrary name for the new connection between VPN gateway1 and the remote VPN Gateway2-public IP2"
      }
    },
    "connectionName21-11": {
      "type": "string",
      "defaultValue": "[concat(parameters('gateway2Name'),'-to-', parameters('gateway1PublicIP1Name'))]",
      "metadata": {
        "description": "Arbitrary name for the new connection between VPN gateway2 and the remote VPN Gateway1-public IP1"
      }
    },
    "connectionName22-12": {
      "type": "string",
      "defaultValue": "[concat(parameters('gateway2Name'),'-to-', parameters('gateway1PublicIP2Name'))]",
      "metadata": {
        "description": "Arbitrary name for the new connection between VPN gateway2 and the remote VPN Gateway1-public IP2"
      }
    },
    "sharedKey": {
      "type": "string",
      "defaultValue": "_your_Pre-Shared-Secret",
      "metadata": {
        "description": "Shared key (PSK) for IPSec tunnels"
      }
    },
    "vm1Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'vm1')]",
      "metadata": {
        "description": "name of the VM in subnet1 in VNet1"
      }
    },
    "vm2Name": {
      "type": "string",
      "defaultValue": "[concat(parameters('prefix'),'vm2')]",
      "metadata": {
        "description": "name of the VM in subnet1 in VNet2"
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_B1s",
      "allowedValues": [
        "Standard_B1ls",
        "Standard_B1s",
        "Standard_D2s_v3",
        "Standard_D16s_v3"
      ],
      "metadata": {
        "description": "Size of the Virtual Machine"
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "administrator username of the VMs"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "administrator password of the VMs"
      }
    },
    "dnsLabelgtw1PubIP1": {
      "type": "string",
      "defaultValue": "[toLower( concat( 'gtw1-ip1-', uniqueString(resourceGroup().id) ))]",
      "metadata": {
        "description": "dns name of public IP1 of the VPN Gateway1. Must be lowercase. It should match with the regex: ^[a-z][a-z0-9-]{1,61}[a-z0-9]$."
      }
    },
    "dnsLabelgtw1PubIP2": {
      "type": "string",
      "defaultValue": "[toLower( concat( 'gtw1-ip2-', uniqueString(resourceGroup().id) ))]",
      "metadata": {
        "description": "dns name of public IP2 of the VPN Gateway1. Must be lowercase. It should match with the regex: ^[a-z][a-z0-9-]{1,61}[a-z0-9]$."
      }
    },
    "dnsLabelgtw2PubIP1": {
      "type": "string",
      "defaultValue": "[toLower( concat( 'gtw2-ip1-', uniqueString(resourceGroup().id) ))]",
      "metadata": {
        "description": "dns name of public IP1 of the VPN Gateway2. Must be lowercase. It should match with the regex: ^[a-z][a-z0-9-]{1,61}[a-z0-9]$."
      }
    },
    "dnsLabelgtw2PubIP2": {
      "type": "string",
      "defaultValue": "[toLower( concat( 'gtw2-ip2-', uniqueString(resourceGroup().id) ))]",
      "metadata": {
        "description": "dns name of public IP2 of the VPN Gateway2. Must be lowercase. It should match with the regex: ^[a-z][a-z0-9-]{1,61}[a-z0-9]$."
      }
    },
    "publicIpZone": {
      "type": "string",
      "defaultValue": "1",
      "allowedValues": [
        "1",
        "2",
        "3"
      ],
      "metadata": {
        "description": "Availability zone for the public IP addresses."
      }
    }
  },
  "variables": {
    "location1": "[parameters('location1')]",
    "location2": "[parameters('location2')]",
    "vNet1Name": "[parameters('vNet1Name')]",
    "vNet2Name": "[parameters('vNet2Name')]",
    "subnet11Name": "[parameters('subnet11Name')]",
    "subnet12Name": "[parameters('subnet12Name')]",
    "subnet21Name": "[parameters('subnet21Name')]",
    "subnet22Name": "[parameters('subnet22Name')]",
    "vNet1AddressPrefix": "[parameters('vNet1AddressPrefix')]",
    "vNet2AddressPrefix": "[parameters('vNet2AddressPrefix')]",
    "subnet11Prefix": "[parameters('subnet11Prefix')]",
    "subnet12Prefix": "[parameters('subnet12Prefix')]",
    "subnet21Prefix": "[parameters('subnet21Prefix')]",
    "subnet22Prefix": "[parameters('subnet22Prefix')]",
    "gateway1SubnetPrefix": "[parameters('gateway1SubnetPrefix')]",
    "gateway2SubnetPrefix": "[parameters('gateway2SubnetPrefix')]",
    "gateway1subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('vNet1Name'),'GatewaySubnet') ]",
    "gateway2subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('vNet2Name'),'GatewaySubnet') ]",
    "subnet11Ref": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('vNet1Name'), variables('subnet11Name') )]",
    "subnet21Ref": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('vNet2Name'), variables('subnet21Name') )]",
    "gateway1Name": "[parameters('gateway1Name')]",
    "gateway2Name": "[parameters('gateway2Name')]",
    "gateway1PublicIP1Name": "[parameters('gateway1PublicIP1Name')]",
    "gateway1PublicIP2Name": "[parameters('gateway1PublicIP2Name')]",
    "gateway2PublicIP1Name": "[parameters('gateway2PublicIP1Name')]",
    "gateway2PublicIP2Name": "[parameters('gateway2PublicIP2Name')]",
    "gateway2PublicIP1Id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('gateway2PublicIP1Name'))]",
    "gateway2PublicIP2Id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('gateway2PublicIP2Name'))]",
    "gateway1PublicIP1Id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('gateway1PublicIP1Name'))]",
    "gateway1PublicIP2Id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('gateway1PublicIP2Name'))]",
    "dnsLabelgtw1PubIP1": "[parameters('dnsLabelgtw1PubIP1')]",
    "dnsLabelgtw1PubIP2": "[parameters('dnsLabelgtw1PubIP2')]",
    "dnsLabelgtw2PubIP1": "[parameters('dnsLabelgtw2PubIP1')]",
    "dnsLabelgtw2PubIP2": "[parameters('dnsLabelgtw2PubIP2')]",
    "asnGtw1": "[parameters('asnGtw1')]",
    "asnGtw2": "[parameters('asnGtw2')]",
    "localGatewayName11": "[parameters('localGatewayName11')]",
    "localGatewayName12": "[parameters('localGatewayName12')]",
    "localGatewayName21": "[parameters('localGatewayName21')]",
    "localGatewayName22": "[parameters('localGatewayName22')]",
    "connectionName11-21": "[parameters('connectionName11-21')]",
    "connectionName12-22": "[parameters('connectionName12-22')]",
    "connectionName21-11": "[parameters('connectionName21-11')]",
    "connectionName22-12": "[parameters('connectionName22-12')]",
    "vpnGatewayGeneration": "[parameters('vpnGatewayGeneration')]",
    "vm1Name": "[parameters('vm1Name')]",
    "vm2Name": "[parameters('vm2Name')]",
    "nsg1": "[concat(parameters('prefix'),'nsg1')]",
    "nsg2": "[concat(parameters('prefix'),'nsg2')]",
    "nic1Name": "[concat(variables('vm1Name'), '-nic')]",
    "nic2Name": "[concat(variables('vm2Name'), '-nic')]",
    "vm1PublicIPName": "[concat(variables('vm1Name'), '-pubIP')]",
    "vm2PublicIPName": "[concat(variables('vm2Name'), '-pubIP')]",
    "vmSize": "[parameters('vmSize')]",
    "imageReference": {
      "publisher": "Canonical",
      "offer": "0001-com-ubuntu-server-focal",
      "sku": "20_04-lts",
      "version": "latest"
    }
  },
  "resources": [
    {
      "comments": "network security group applied to the subnets in the VNet1",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-08-01",
      "location": "[variables('location1')]",
      "name": "[variables('nsg1')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH-rule",
            "properties": {
              "description": "allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 500,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP-rule",
            "properties": {
              "description": "allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 510,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "network security group applied to the subnets in the VNet2",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-08-01",
      "name": "[variables('nsg2')]",
      "location": "[variables('location2')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH-rule",
            "properties": {
              "description": "allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 500,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP-rule",
            "properties": {
              "description": "allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 510,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "Virtual Network 1",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-08-01",
      "name": "[variables('vNet1Name')]",
      "location": "[variables('location1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg1'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vNet1AddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnet11Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet11Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg1'))]"
              }
            }
          },
          {
            "name": "[variables('subnet12Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet12Prefix')]"
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('gateway1subnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "comments": "Virtual Network 2",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-08-01",
      "name": "[variables('vNet2Name')]",
      "location": "[variables('location2')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg2'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vNet2AddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnet21Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet21Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg2'))]"
              }
            }
          },
          {
            "name": "[variables('subnet22Name')]",
            "properties": {
              "addressPrefix": "[variables('subnet22Prefix')]"
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('gateway2subnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "comments": "static public IP of the VPN Gateway1-instance 0",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-08-01",
      "name": "[variables('gateway1PublicIP1Name')]",
      "location": "[variables('location1')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[variables('dnsLabelgtw1PubIP1')]"
        }
      },
      "zones": ["[parameters('publicIpZone')]"]
    },
    {
      "comments": "static public IP of the VPN Gateway1- instance 1",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-08-01",
      "name": "[variables('gateway1PublicIP2Name')]",
      "location": "[variables('location1')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[variables('dnsLabelgtw1PubIP2')]"
        }
      },
      "zones": ["[parameters('publicIpZone')]"]
    },
    {
      "comments": "static public IP of the VPN Gateway2-instance 0",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-08-01",
      "name": "[variables('gateway2PublicIP1Name')]",
      "location": "[variables('location2')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[variables('dnsLabelgtw2PubIP1')]"
        }
      },
      "zones": ["[parameters('publicIpZone')]"]
    },
    {
      "comments": "static public IP of the VPN Gateway2- instance 1",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-08-01",
      "name": "[variables('gateway2PublicIP2Name')]",
      "location": "[variables('location2')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[variables('dnsLabelgtw2PubIP2')]"
        }
      },
      "zones": ["[parameters('publicIpZone')]"]
    },
    {
      "comments": "VPN Gateway 1- deployed in location 1",
      "type": "Microsoft.Network/virtualNetworkGateways",
      "apiVersion": "2020-08-01",
      "name": "[variables('gateway1Name')]",
      "location": "[variables('location1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('gateway1PublicIP1Name'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('gateway1PublicIP2Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet1Name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[variables('gateway1SubnetRef')]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('gateway1PublicIP1Name'))]"
              }
            },
            "name": "vnetGateway1Config1"
          },
          {
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[variables('gateway1SubnetRef')]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('gateway1PublicIP2Name'))]"
              }
            },
            "name": "vnetGateway1Config2"
          }
        ],
        "sku": {
          "name": "[parameters('gatewaySku')]",
          "tier": "[parameters('gatewaySku')]"
        },
        "gatewayType": "Vpn",
        "vpnType": "RouteBased",
        "enableBgp": true,
        "activeActive": true,
        "vpnGatewayGeneration": "[variables('vpnGatewayGeneration')]",
        "bgpSettings": {
          "asn": "[variables('asnGtw1')]"
        }
      }
    },
    {
      "comments": "VPN Gateway 2- deployed in location 2",
      "type": "Microsoft.Network/virtualNetworkGateways",
      "apiVersion": "2020-08-01",
      "name": "[variables('gateway2Name')]",
      "location": "[variables('location2')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('gateway2PublicIP1Name'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('gateway2PublicIP2Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet2Name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[variables('gateway2SubnetRef')]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('gateway2PublicIP1Name'))]"
              }
            },
            "name": "vnetGateway2Config1"
          },
          {
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[variables('gateway2SubnetRef')]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('gateway2PublicIP2Name'))]"
              }
            },
            "name": "vnetGateway2Config2"
          }
        ],
        "sku": {
          "name": "[parameters('gatewaySku')]",
          "tier": "[parameters('gatewaySku')]"
        },
        "gatewayType": "Vpn",
        "vpnType": "RouteBased",
        "enableBgp": true,
        "activeActive": true,
        "vpnGatewayGeneration": "[variables('vpnGatewayGeneration')]",
        "bgpSettings": {
          "asn": "[variables('asnGtw2')]"
        }
      }
    },
    {
      "comments": "local network gateway in Gateway1 to connect to the remote gateway1-public IP1",
      "type": "Microsoft.Network/localNetworkGateways",
      "apiVersion": "2020-08-01",
      "name": "[variables('localGatewayName11')]",
      "location": "[variables('location2')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('gateway1Name'))]"
      ],
      "properties": {
        "fqdn": "[reference(variables('gateway1PublicIP1Id'),'2020-06-01').dnsSettings.fqdn]",
        "bgpSettings": {
          "asn": "[variables('asnGtw1')]",
          "bgpPeeringAddress": "[first(split( reference(resourceId('Microsoft.Network/virtualNetworkGateways',variables('gateway1Name')),'2020-06-01').bgpSettings.bgpPeeringAddress , ','))]",
          "peerWeight": 0
        }
      }
    },
    {
      "comments": "local network gateway in Gateway1 to connect to the remote gateway1-public IP2",
      "type": "Microsoft.Network/localNetworkGateways",
      "apiVersion": "2020-08-01",
      "name": "[variables('localGatewayName12')]",
      "location": "[variables('location2')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('gateway1Name'))]"
      ],
      "properties": {
        "fqdn": "[reference(variables('gateway1PublicIP2Id'),'2020-06-01').dnsSettings.fqdn]",
        "bgpSettings": {
          "asn": "[variables('asnGtw1')]",
          "bgpPeeringAddress": "[last(split( reference(resourceId('Microsoft.Network/virtualNetworkGateways',variables('gateway1Name')),'2020-06-01').bgpSettings.bgpPeeringAddress , ','))]",
          "peerWeight": 0
        }
      }
    },
    {
      "comments": "local network gateway in Gateway1 to connect to the remote gateway2 -public IP1",
      "type": "Microsoft.Network/localNetworkGateways",
      "apiVersion": "2020-08-01",
      "name": "[variables('localGatewayName21')]",
      "location": "[variables('location1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('gateway2Name'))]"
      ],
      "properties": {
        "fqdn": "[reference(variables('gateway2PublicIP1Id'),'2020-06-01').dnsSettings.fqdn]",
        "bgpSettings": {
          "asn": "[variables('asnGtw2')]",
          "bgpPeeringAddress": "[first(split( reference(resourceId('Microsoft.Network/virtualNetworkGateways',variables('gateway2Name')),'2020-06-01').bgpSettings.bgpPeeringAddress , ','))]",
          "peerWeight": 0
        }
      }
    },
    {
      "comments": "local network gateway in Gateway1 to connect to the remote gateway2 -public IP2",
      "type": "Microsoft.Network/localNetworkGateways",
      "apiVersion": "2020-08-01",
      "name": "[variables('localGatewayName22')]",
      "location": "[variables('location1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('gateway2Name'))]"
      ],
      "properties": {
        "fqdn": "[reference(variables('gateway2PublicIP2Id'),'2020-06-01').dnsSettings.fqdn]",
        "bgpSettings": {
          "asn": "[variables('asnGtw2')]",
          "bgpPeeringAddress": "[last(split( reference(resourceId('Microsoft.Network/virtualNetworkGateways',variables('gateway2Name')),'2020-06-01').bgpSettings.bgpPeeringAddress , ','))]",
          "peerWeight": 0
        }
      }
    },
    {
      "comments": "VPN connection between [Gateway1] and [Gateway2-pubIP1]",
      "type": "Microsoft.Network/connections",
      "apiVersion": "2020-08-01",
      "name": "[variables('connectionName11-21')]",
      "location": "[variables('location1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('gateway1Name'))]",
        "[resourceId('Microsoft.Network/localNetworkGateways', variables('localGatewayName21'))]"
      ],
      "properties": {
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways',variables('gateway1Name'))]"
        },
        "localNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/localNetworkGateways', variables('localGatewayName21'))]"
        },
        "connectionType": "IPsec",
        "routingWeight": 0,
        "sharedKey": "[parameters('sharedKey')]",
        "enableBGP": true
      }
    },
    {
      "comments": "VPN connection between [Gateway1] and [Gateway2-pubIP2]",
      "type": "Microsoft.Network/connections",
      "apiVersion": "2020-08-01",
      "name": "[variables('connectionName12-22')]",
      "location": "[variables('location1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('gateway1Name'))]",
        "[resourceId('Microsoft.Network/localNetworkGateways', variables('localGatewayName22'))]"
      ],
      "properties": {
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways',variables('gateway1Name'))]"
        },
        "localNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/localNetworkGateways', variables('localGatewayName22'))]"
        },
        "connectionType": "IPsec",
        "routingWeight": 0,
        "sharedKey": "[parameters('sharedKey')]",
        "enableBGP": true
      }
    },
    {
      "comments": "VPN connection between [Gateway2] and [Gateway1-pubIP1]",
      "type": "Microsoft.Network/connections",
      "apiVersion": "2020-08-01",
      "name": "[variables('connectionName21-11')]",
      "location": "[variables('location2')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('gateway2Name'))]",
        "[resourceId('Microsoft.Network/localNetworkGateways', variables('localGatewayName11'))]"
      ],
      "properties": {
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways',variables('gateway2Name'))]"
        },
        "localNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/localNetworkGateways', variables('localGatewayName11'))]"
        },
        "connectionType": "IPsec",
        "routingWeight": 0,
        "sharedKey": "[parameters('sharedKey')]",
        "enableBGP": true
      }
    },
    {
      "comments": "VPN connection between [Gateway2] and [Gateway1-pubIP2]",
      "type": "Microsoft.Network/connections",
      "apiVersion": "2020-06-01",
      "name": "[variables('connectionName22-12')]",
      "location": "[variables('location2')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('gateway2Name'))]",
        "[resourceId('Microsoft.Network/localNetworkGateways', variables('localGatewayName12'))]"
      ],
      "properties": {
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways',variables('gateway2Name'))]"
        },
        "localNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/localNetworkGateways', variables('localGatewayName12'))]"
        },
        "connectionType": "IPsec",
        "routingWeight": 0,
        "sharedKey": "[parameters('sharedKey')]",
        "enableBGP": true
      }
    },
    {
      "comments": "public IP address of the VM1",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-08-01",
      "name": "[variables('vm1PublicIPName')]",
      "location": "[variables('location1')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "comments": "public IP address of the VM2",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-08-01",
      "name": "[variables('vm2PublicIPName')]",
      "location": "[variables('location2')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "comments": "NIC of the VM1",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2020-08-01",
      "name": "[variables('nic1Name')]",
      "location": "[variables('location1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('vm1PublicIPName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet1Name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('vm1PublicIPName'))]"
              },
              "subnet": {
                "id": "[variables('subnet11Ref')]"
              }
            }
          }
        ]
      }
    },
    {
      "comments": "NIC of the VM2",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2020-08-01",
      "name": "[variables('nic2Name')]",
      "location": "[variables('location2')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('vm2PublicIPName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet2Name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig2",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('vm2PublicIPName'))]"
              },
              "subnet": {
                "id": "[variables('subnet21Ref')]"
              }
            }
          }
        ]
      }
    },
    {
      "comments": "VM1",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2020-06-01",
      "name": "[variables('vm1Name')]",
      "location": "[variables('location1')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('nic1Name'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('vm1Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imageReference').publisher]",
            "offer": "[variables('imageReference').offer]",
            "sku": "[variables('imageReference').sku]",
            "version": "[variables('imageReference').version]"
          },
          "osDisk": {
            "name": "[concat(variables('vm1Name'),'-OSdisk')]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nic1Name'))]"
            }
          ]
        }
      }
    },
    {
      "comments": "VM2",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2020-06-01",
      "name": "[variables('vm2Name')]",
      "location": "[variables('location2')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('nic2Name'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('vm2Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imageReference').publisher]",
            "offer": "[variables('imageReference').offer]",
            "sku": "[variables('imageReference').sku]",
            "version": "[variables('imageReference').version]"
          },
          "osDisk": {
            "name": "[concat(variables('vm2Name'),'-OSdisk')]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nic2Name'))]"
            }
          ]
        }
      }
    }
  ]
}
